# mr-reachy

./: .env.example  .gitignore  README.md  agents.local.md  app.py  index.html  plan.md  pyproject.toml  requirements.txt  style.css
.github/workflows/: sync-huggingface.yml
mr_reachy/: __init__.py  audio.py  config.py  expressions.py  io_backends.py  main.py  medication.py  og_client.py  reminders.py  storage.py  tts.py
tests/: test_medication.py  test_reminders.py  test_storage.py
