[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mr-reachy"
version = "0.1.0"
description = "Sam — a Reachy Mini medication reminder companion running on the 0G decentralized AI compute network."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "Sam" }]
dependencies = [
    "reachy-mini==1.7.3",
    "openai>=2.0",
    "python-dotenv>=1.0",
    "sounddevice>=0.5",
    "soundfile>=0.12",
    "numpy",
]

[project.optional-dependencies]
mujoco = ["reachy-mini[mujoco]==1.7.3"]
# On-robot extras: Piper TTS (offline speech) + Pillow (encode camera frames).
robot = ["piper-tts>=1.2", "pillow>=10.0"]

[project.scripts]
mr-reachy = "mr_reachy.main:cli"

# Reachy Mini app-store discovery (see reachy-mini-app-assistant check/publish).
# The key must equal the project name ("mr-reachy"); the value points at the class.
[project.entry-points.reachy_mini_apps]
mr-reachy = "mr_reachy.main:MrReachy"

[tool.hatch.build.targets.wheel]
packages = ["mr_reachy"]
